--- a/makecontact.html
+++ b/makecontact.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Newsletter | Tripp Robbins</title>
+    <title>Make Contact | Tripp Robbins</title>
 </head>
 
 <body>
     <div id="app"></div>
-    <script type="module" src="/newsletter.js"></script>
+    <script type="module" src="/makecontact.js"></script>
 </body>
 
 </html>
